--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.11</version>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
 		<!-- <dependency> <groupId>org.mockito</groupId> <artifactId>mockito-core</artifactId> 
